# cmakeDD

control-flow/functions/: CMakeLists.txt  README
control-flow/if-else/: CMakeLists.txt
control-flow/loops/: CMakeLists.txt
control-flow/scopes/: CMakeLists.txt  README
control-flow/scopes/Matryoshka/: CMakeLists.txt
control-flow/scopes/Matryoshka/Matryoshka1/: CMakeLists.txt
control-flow/scopes/function-scope/: CMakeLists.txt  README
generator-expressions/: CMakeLists.txt  README
hello-cmake/: CMakeLists.txt  README  hello.cpp
lists/: CMakeLists.txt  README
reproducers/c_standard/: CMakeLists.txt  README.md
variables/: CMakeLists.txt
